force-app/main/default/objects/sonar__Analysis_Object__c/sonar__Analysis_Object__c.object-meta.xml
<CustomObject>
    <label>Analysis Object</label>
    <nameField>
        <displayFormat>AO_{0000}</displayFormat>
        <label>Analysis Object</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analyses Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>