force-app/main/default/objects/sonar__Analysis_Object__c/fields/sonar__Analysis__c.field-meta.xml
<CustomField>
    <fullName>sonar__Analysis__c</fullName>
    <label>Analysis</label>
    <referenceTo>sonar__Analysis__c</referenceTo>
    <relationshipLabel>Analyses Objects</relationshipLabel>
    <relationshipName>Analyses_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>