force-app/main/default/objects/sonar__Analysis_Object__c/fields/sonar__Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>sonar__Apex_Job_Id__c</fullName>
    <label>Apex Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>