force-app/main/default/objects/sonar__Analysis_Object__c/fields/sonar__Date__c.field-meta.xml
<CustomField>
    <fullName>sonar__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>