force-app/main/default/objects/sonar__Analysis_Object__c/fields/sonar__SObject__c.field-meta.xml
<CustomField>
    <fullName>sonar__SObject__c</fullName>
    <label>SObject</label>
    <referenceTo>sonar__SObject__c</referenceTo>
    <relationshipLabel>Analyses Objects</relationshipLabel>
    <relationshipName>Analyses_Objects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>