force-app/main/default/objects/sonar__Analysis_Object__c/fields/sonar__SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>sonar__SObject_Name__c</fullName>
    <formula>sonar__SObject__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SObject Name</label>
    <type>Text</type>
</CustomField>